@@ -39,6 +39,10 @@ PHP                                                                        NEWS
 - ODBC:
   . Fixed bug #80592 (all floats are the same in ODBC parameters). (cmb)
 
+- Opcache:
+  . Fixed bug #80422 (php_opcache.dll crashes when using Apache 2.4 with JIT).
+    (Dmitry)
+
 - PDO_Firebird:
   . Fixed bug #80521 (Parameters with underscores no longer recognized). (cmb,
     Simonov Denis)
